gerenciamento_problemas.log
2025-10-24 11:31:54,218 - ERROR - Erro ao verificar URLs: 'utf-8' codec can't decode byte 0xe7 in position 72: invalid continuation byte
2025-10-24 11:34:42,945 - INFO - 🔴 DETECTANDO PROBLEMAS CRÍTICOS...
2025-10-24 11:36:00,138 - INFO - 🔴 DETECTANDO PROBLEMAS CRÍTICOS...
2025-10-24 11:37:50,790 - INFO - 🔴 DETECTANDO PROBLEMAS CRÍTICOS...
2025-10-24 11:39:56,817 - INFO - 🔴 DETECTANDO PROBLEMAS CRÍTICOS...
2025-10-24 11:42:05,190 - INFO - 🔴 DETECTANDO PROBLEMAS CRÍTICOS...
2025-10-24 11:42:45,185 - INFO - 🔴 DETECTANDO PROBLEMAS CRÍTICOS...
2025-10-24 11:42:52,592 - INFO - 📊 Relatório salvo em: relatorio_gerenciamento_problemas.json
2025-10-24 11:43:01,442 - INFO - 🔧 EXECUTANDO CORREÇÕES AUTOMÁTICAS...
2025-10-24 11:43:01,442 - WARNING - ⚠️ Script fix_js_syntax.py não encontrado
2025-10-24 11:43:01,504 - ERROR - ❌ Erro ao executar verificar_corrigir_filtros.py:   File "D:\PROGRAMA\CONCEPTION\ANDRE\verificar_corrigir_filtros.py", line 141
    else:
    ^^^^
SyntaxError: invalid syntax

2025-10-24 11:43:02,269 - INFO - ✅ Script verificar_redundancias.py executado com sucesso
2025-10-24 11:43:05,990 - INFO - ✅ Script verificar_corrigir_botoes.py executado com sucesso
2025-10-24 11:43:09,353 - INFO - 🚀 INICIANDO WORKFLOW COMPLETO DE GERENCIAMENTO DE PROBLEMAS
2025-10-24 11:43:09,353 - INFO - 🔴 DETECTANDO PROBLEMAS CRÍTICOS...
2025-10-24 11:43:19,535 - INFO - 🟡 DETECTANDO PROBLEMAS IMPORTANTES...
2025-10-24 11:43:19,601 - INFO - 🔧 EXECUTANDO CORREÇÕES AUTOMÁTICAS...
2025-10-24 11:43:19,601 - WARNING - ⚠️ Script fix_js_syntax.py não encontrado
2025-10-24 11:43:19,654 - ERROR - ❌ Erro ao executar verificar_corrigir_filtros.py:   File "D:\PROGRAMA\CONCEPTION\ANDRE\verificar_corrigir_filtros.py", line 141
    else:
    ^^^^
SyntaxError: invalid syntax

2025-10-24 11:43:20,274 - INFO - ✅ Script verificar_redundancias.py executado com sucesso
2025-10-24 11:43:22,907 - INFO - ✅ Script verificar_corrigir_botoes.py executado com sucesso
2025-10-24 11:43:22,908 - INFO - 📊 Relatório salvo em: relatorio_gerenciamento_problemas.json
2025-10-24 11:43:22,908 - INFO - ============================================================
2025-10-24 11:43:22,908 - INFO - 📊 RESUMO FINAL:
2025-10-24 11:43:22,908 - INFO - 🔴 Problemas Críticos: 2
2025-10-24 11:43:22,908 - INFO - 🟡 Problemas Importantes: 2
2025-10-24 11:43:22,908 - INFO - ✅ Correções Aplicadas: 2
2025-10-24 11:43:22,908 - INFO - 📈 Taxa de Sucesso: 50.0%
2025-10-24 11:43:22,908 - INFO - ============================================================
2025-10-24 11:56:37,545 - INFO - 🔴 DETECTANDO PROBLEMAS CRÍTICOS...
2025-10-24 11:56:56,694 - INFO - 🚀 INICIANDO WORKFLOW COMPLETO DE GERENCIAMENTO DE PROBLEMAS
2025-10-24 11:56:56,694 - INFO - 🔴 DETECTANDO PROBLEMAS CRÍTICOS...
2025-10-24 11:56:58,046 - INFO - 🟡 DETECTANDO PROBLEMAS IMPORTANTES...
2025-10-24 11:56:58,105 - INFO - 🔧 EXECUTANDO CORREÇÕES AUTOMÁTICAS...
2025-10-24 11:56:58,105 - WARNING - ⚠️ Script fix_js_syntax.py não encontrado
2025-10-24 11:56:58,146 - ERROR - ❌ Erro ao executar verificar_corrigir_filtros.py:   File "D:\PROGRAMA\CONCEPTION\ANDRE\verificar_corrigir_filtros.py", line 141
    else:
    ^^^^
SyntaxError: invalid syntax

2025-10-24 11:56:58,585 - INFO - ✅ Script verificar_redundancias.py executado com sucesso
2025-10-24 11:57:00,537 - INFO - ✅ Script verificar_corrigir_botoes.py executado com sucesso
2025-10-24 11:57:00,538 - INFO - 📊 Relatório salvo em: relatorio_gerenciamento_problemas.json
2025-10-24 11:57:00,538 - INFO - ============================================================
2025-10-24 11:57:00,538 - INFO - 📊 RESUMO FINAL:
2025-10-24 11:57:00,538 - INFO - 🔴 Problemas Críticos: 2
2025-10-24 11:57:00,538 - INFO - 🟡 Problemas Importantes: 2
2025-10-24 11:57:00,538 - INFO - ✅ Correções Aplicadas: 2
2025-10-24 11:57:00,539 - INFO - 📈 Taxa de Sucesso: 50.0%
2025-10-24 11:57:00,539 - INFO - ============================================================
2025-10-24 11:57:14,268 - INFO - 🚀 INICIANDO WORKFLOW COMPLETO DE GERENCIAMENTO DE PROBLEMAS
2025-10-24 11:57:14,268 - INFO - 🔴 DETECTANDO PROBLEMAS CRÍTICOS...
2025-10-24 11:57:25,239 - INFO - 🟡 DETECTANDO PROBLEMAS IMPORTANTES...
2025-10-24 11:57:25,307 - INFO - 🔧 EXECUTANDO CORREÇÕES AUTOMÁTICAS...
2025-10-24 11:57:25,307 - WARNING - ⚠️ Script fix_js_syntax.py não encontrado
2025-10-24 11:57:25,362 - ERROR - ❌ Erro ao executar verificar_corrigir_filtros.py:   File "D:\PROGRAMA\CONCEPTION\ANDRE\verificar_corrigir_filtros.py", line 235
    return entity_map.get(entity, entity)
IndentationError: unexpected indent

2025-10-24 11:57:25,908 - INFO - ✅ Script verificar_redundancias.py executado com sucesso
2025-10-24 11:57:28,823 - INFO - ✅ Script verificar_corrigir_botoes.py executado com sucesso
2025-10-24 11:57:28,824 - INFO - 📊 Relatório salvo em: relatorio_gerenciamento_problemas.json
2025-10-24 11:57:28,824 - INFO - ============================================================
2025-10-24 11:57:28,825 - INFO - 📊 RESUMO FINAL:
2025-10-24 11:57:28,825 - INFO - 🔴 Problemas Críticos: 2
2025-10-24 11:57:28,825 - INFO - 🟡 Problemas Importantes: 2
2025-10-24 11:57:28,825 - INFO - ✅ Correções Aplicadas: 2
2025-10-24 11:57:28,825 - INFO - 📈 Taxa de Sucesso: 50.0%
2025-10-24 11:57:28,825 - INFO - ============================================================
2025-10-24 11:58:51,628 - INFO - 🚀 INICIANDO WORKFLOW COMPLETO DE GERENCIAMENTO DE PROBLEMAS
2025-10-24 11:58:51,628 - INFO - 🔴 DETECTANDO PROBLEMAS CRÍTICOS...
2025-10-24 11:58:57,964 - INFO - 🟡 DETECTANDO PROBLEMAS IMPORTANTES...
2025-10-24 11:58:58,018 - INFO - 🔧 EXECUTANDO CORREÇÕES AUTOMÁTICAS...
2025-10-24 11:58:58,018 - WARNING - ⚠️ Script fix_js_syntax.py não encontrado
2025-10-24 11:58:58,062 - ERROR - ❌ Erro ao executar verificar_corrigir_filtros.py:   File "D:\PROGRAMA\CONCEPTION\ANDRE\verificar_corrigir_filtros.py", line 425
    else:
    ^^^^
SyntaxError: invalid syntax

2025-10-24 11:58:58,485 - INFO - ✅ Script verificar_redundancias.py executado com sucesso
2025-10-24 11:59:01,757 - INFO - ✅ Script verificar_corrigir_botoes.py executado com sucesso
2025-10-24 11:59:01,758 - INFO - 📊 Relatório salvo em: relatorio_gerenciamento_problemas.json
2025-10-24 11:59:01,758 - INFO - ============================================================
2025-10-24 11:59:01,758 - INFO - 📊 RESUMO FINAL:
2025-10-24 11:59:01,758 - INFO - 🔴 Problemas Críticos: 2
2025-10-24 11:59:01,758 - INFO - 🟡 Problemas Importantes: 2
2025-10-24 11:59:01,759 - INFO - ✅ Correções Aplicadas: 2
2025-10-24 11:59:01,759 - INFO - 📈 Taxa de Sucesso: 50.0%
2025-10-24 11:59:01,759 - INFO - ============================================================
2025-10-24 11:59:21,813 - INFO - 🚀 INICIANDO WORKFLOW COMPLETO DE GERENCIAMENTO DE PROBLEMAS
2025-10-24 11:59:21,813 - INFO - 🔴 DETECTANDO PROBLEMAS CRÍTICOS...
2025-10-24 11:59:31,579 - INFO - 🟡 DETECTANDO PROBLEMAS IMPORTANTES...
2025-10-24 11:59:31,649 - INFO - 🔧 EXECUTANDO CORREÇÕES AUTOMÁTICAS...
2025-10-24 11:59:31,649 - WARNING - ⚠️ Script fix_js_syntax.py não encontrado
2025-10-24 11:59:31,861 - INFO - ✅ Script verificar_corrigir_filtros.py executado com sucesso
2025-10-24 11:59:32,711 - INFO - ✅ Script verificar_redundancias.py executado com sucesso
2025-10-24 11:59:36,616 - INFO - ✅ Script verificar_corrigir_botoes.py executado com sucesso
2025-10-24 11:59:36,616 - INFO - 📊 Relatório salvo em: relatorio_gerenciamento_problemas.json
2025-10-24 11:59:36,617 - INFO - ============================================================
2025-10-24 11:59:36,617 - INFO - 📊 RESUMO FINAL:
2025-10-24 11:59:36,617 - INFO - 🔴 Problemas Críticos: 2
2025-10-24 11:59:36,617 - INFO - 🟡 Problemas Importantes: 2
2025-10-24 11:59:36,617 - INFO - ✅ Correções Aplicadas: 3
2025-10-24 11:59:36,617 - INFO - 📈 Taxa de Sucesso: 75.0%
2025-10-24 11:59:36,617 - INFO - ============================================================
2025-10-24 11:59:39,476 - INFO - 🔴 DETECTANDO PROBLEMAS CRÍTICOS...
